################################################################################
#
# CMake file for openPOWERLINK CN library within OMNeT++ running on Linux
#
# Copyright (c) 2016, Franz Profelt (franz.profelt@gmail.com)
#
################################################################################


# Set library name
SET(LIB_NAME "oplkcn-sim")
MESSAGE(STATUS "Configuring ${LIB_NAME}")

# Set type of library
IF(CFG_COMPILE_SHARED_LIBRARY)
    SET(LIB_TYPE "SHARED")
ELSE()
    SET(LIB_TYPE "STATIC")
ENDIF()

# Select object dictionary
SET(OBJDICT CiA401_CN)

# set sources of POWERLINK library
SET (LIB_SOURCES
     ${USER_SOURCES}
     ${SDO_LINUX_SOURCES}
     ${CTRL_UCAL_DIRECT_SOURCES}
     ${DLL_UCAL_CIRCBUF_SOURCES}
     ${ERRHND_UCAL_LOCAL_SOURCES}
     ${EVENT_UCAL_LINUXUSER_SOURCES}
     ${PDO_UCAL_LOCAL_SOURCES}
     ${USER_TIMER_LINUXUSER_SOURCES}
     ${KERNEL_SOURCES}
     ${CTRL_KCAL_DIRECT_SOURCES}
     ${DLL_KCAL_CIRCBUF_SOURCES}
     ${ERRHND_KCAL_LOCAL_SOURCES}
     ${EVENT_KCAL_LINUXUSER_SOURCES}
     ${PDO_KCAL_LOCAL_SOURCES}
     ${HARDWARE_DRIVER_LINUXUSER_SOURCES}
     ${COMMON_SOURCES}
     ${COMMON_LINUXUSER_SOURCES}
     ${TARGET_LINUX_SOURCES}
     ${OBD_CONF_LINUXUSER_SOURCES}
     ${CIRCBUF_POSIX_SOURCES}
     ${MEMMAP_NULL_SOURCES}
     )

IF(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "^(i.86|x86(_64)?)$")
    SET(LIB_SOURCES ${LIB_SOURCES} ${ARCH_X86_SOURCES})
ELSEIF(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES arm*)
    SET(LIB_SOURCES ${LIB_SOURCES} ${ARCH_LE_SOURCES})
ELSE()
    MESSAGE(FATAL_ERROR "Unsupported CMAKE_HOST_SYSTEM_PROCESSOR ${CMAKE_HOST_SYSTEM_PROCESSOR}")
ENDIF()

# Configure compile definitions
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -std=c99 -fno-strict-aliasing")
ADD_DEFINITIONS(-D_GNU_SOURCE -D_POSIX_C_SOURCE=200112L)

IF(CFG_STORE_RESTORE)
    ADD_DEFINITIONS(-DCONFIG_STORE_RESTORE)
ENDIF()

# Additional include directories
INCLUDE_DIRECTORIES(
        .
    ${OBJDICT_DIR}/${OBJDICT}
    )

# Define library and installation rules
ADD_LIBRARY(${LIB_NAME} ${LIB_TYPE} ${LIB_SOURCES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${ARCH_LIBRARIES})
SET_PROPERTY(TARGET ${LIB_NAME} PROPERTY COMPILE_DEFINITIONS_DEBUG DEBUG;DEF_DEBUG_LVL=${CFG_DEBUG_LVL})
SET_PROPERTY(TARGET ${LIB_NAME} PROPERTY DEBUG_POSTFIX "_d")
INSTALL(TARGETS ${LIB_NAME} ARCHIVE DESTINATION . LIBRARY DESTINATION .)
