################################################################################
#
# CMake file for openPOWERLINK MN library on Linux with simulation interface
#
# Copyright (c) 2016, Franz Profelt (franz.profelt@gmail.com)
#
################################################################################

# Set library name
SET(LIB_NAME "oplkmn-sim")
MESSAGE(STATUS "Configuring ${LIB_NAME}")

# Set type of library
IF(CFG_COMPILE_SHARED_LIBRARY)
    SET(LIB_TYPE "SHARED")
ELSE()
    SET(LIB_TYPE "STATIC")
ENDIF()

# Select object dictionary
SET(OBJDICT CiA302-4_MN)

# set general sources of POWERLINK library
SET (LIB_SOURCES
     ${USER_SOURCES}
     ${SDO_SIM_SOURCES}
     ${USER_MN_SOURCES}
     ${CTRL_UCAL_DIRECT_SOURCES}
     ${DLL_UCAL_CIRCBUF_SOURCES}
     ${ERRHND_UCAL_LOCAL_SOURCES}
     ${EVENT_UCAL_SIM_SOURCES}
     ${PDO_UCAL_LOCAL_SOURCES}
     ${USER_TIMER_SIM_SOURCES}
     ${KERNEL_SOURCES}
     ${CTRL_KCAL_DIRECT_SOURCES}
     ${DLL_KCAL_CIRCBUF_SOURCES}
     ${ERRHND_KCAL_LOCAL_SOURCES}
     ${EVENT_KCAL_SIM_SOURCES}
     ${PDO_KCAL_LOCAL_SOURCES}
     ${HARDWARE_DRIVER_SIM_SOURCES}
     ${COMMON_SOURCES}
     ${COMMON_SIM_SOURCES}
     ${TARGET_SIM_SOURCES}
     ${CIRCBUF_SIM_SOURCES}
     ${MEMMAP_NULL_SOURCES}
     )

IF(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "^(i.86|x86(_64)?)$")
    SET(LIB_SOURCES ${LIB_SOURCES} ${ARCH_X86_SOURCES})
ELSEIF(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES arm*)
    SET(LIB_SOURCES ${LIB_SOURCES} ${ARCH_LE_SOURCES})
ELSE()
    MESSAGE(FATAL_ERROR "Unsupported CMAKE_HOST_SYSTEM_PROCESSOR ${CMAKE_HOST_SYSTEM_PROCESSOR}")
ENDIF()

# Configure compile definitions
IF(CFG_INCLUDE_MN_REDUNDANCY)
    ADD_DEFINITIONS(-DCONFIG_INCLUDE_NMT_RMN)
ENDIF()
ADD_DEFINITIONS(-DCONFIG_MN -D_GNU_SOURCE -D_POSIX_C_SOURCE=200112L)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -std=c99 -fno-strict-aliasing")

# Additional include directories
INCLUDE_DIRECTORIES(
        .
    ${OBJDICT_DIR}/${OBJDICT}
    )

# Define library and installation rules
ADD_LIBRARY(${LIB_NAME} ${LIB_TYPE} ${LIB_SOURCES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${ARCH_LIBRARIES})
SET_PROPERTY(TARGET ${LIB_NAME} PROPERTY COMPILE_DEFINITIONS_DEBUG DEBUG;DEF_DEBUG_LVL=${CFG_DEBUG_LVL})
SET_PROPERTY(TARGET ${LIB_NAME} PROPERTY DEBUG_POSTFIX "_d")
INSTALL(TARGETS ${LIB_NAME} ARCHIVE DESTINATION . LIBRARY DESTINATION .)
