################################################################################
#
# CMake file for openPOWERLINK CN library within OMNeT++ running on Windows
#
# Copyright (c) 2016, Franz Profelt (franz.profelt@gmail.com)
#
################################################################################

# Set library name
SET(LIB_NAME "oplkcn-sim")
MESSAGE(STATUS "Configuring ${LIB_NAME}")

# Set type of library
IF(CFG_WINDOWS_DLL)
    SET(LIB_TYPE "SHARED")
ELSE()
    SET(LIB_TYPE "STATIC")
ENDIF()

# Select object dictionary
SET(OBJDICT CiA401_CN)

# set sources of POWERLINK library
SET (LIB_SOURCES
     ${USER_SOURCES}
    ${OBD_CONF_WINDOWSUSER_SOURCES}
     ${SDO_WINDOWS_SOURCES}
     ${CTRL_UCAL_DIRECT_SOURCES}
     ${DLL_UCAL_CIRCBUF_SOURCES}
     ${ERRHND_UCAL_LOCAL_SOURCES}
     ${EVENT_UCAL_WINDOWS_SOURCES}
     ${PDO_UCAL_LOCAL_SOURCES}
     ${USER_TIMER_WINDOWS_SOURCES}
     ${KERNEL_SOURCES}
     ${CTRL_KCAL_DIRECT_SOURCES}
     ${DLL_KCAL_CIRCBUF_SOURCES}
     ${ERRHND_KCAL_LOCAL_SOURCES}
     ${EVENT_KCAL_WINDOWS_SOURCES}
     ${PDO_KCAL_LOCAL_SOURCES}
     ${HARDWARE_DRIVER_WINDOWS_SOURCES}
     ${COMMON_SOURCES}
     ${COMMON_WINDOWS_SOURCES}
     ${TARGET_WINDOWS_SOURCES}
     ${CIRCBUF_WINDOWS_SOURCES}
     ${ARCH_X86_SOURCES}
     ${MEMMAP_NULL_SOURCES}
     )

IF(CMAKE_CL_64)
    LINK_DIRECTORIES(${CONTRIB_SOURCE_DIR}/pcap/windows/WpdPack/Lib/x64)
ELSE ()
    LINK_DIRECTORIES(${CONTRIB_SOURCE_DIR}/pcap/windows/WpdPack/Lib)
ENDIF()

SET(LINK_LIBRARIES wpcap iphlpapi)

# Group Source and Header files
SOURCE_GROUP("Source Files\\User Source Files" FILES
    ${USER_SOURCES}
    ${OBD_CONF_WINDOWSUSER_SOURCES}
    ${CTRL_UCAL_DIRECT_SOURCES}
    ${DLL_UCAL_CIRCBUF_SOURCES}
    ${ERRHND_UCAL_LOCAL_SOURCES}
    ${EVENT_UCAL_WINDOWS_SOURCES}
    ${PDO_UCAL_LOCAL_SOURCES}
    ${USER_TIMER_WINDOWS_SOURCES}
    )

SOURCE_GROUP("Source Files\\Kernel Source Files" FILES
    ${KERNEL_SOURCES}
    ${CTRL_KCAL_DIRECT_SOURCES}
    ${DLL_KCAL_CIRCBUF_SOURCES}
    ${ERRHND_KCAL_LOCAL_SOURCES}
    ${EVENT_KCAL_WINDOWS_SOURCES}
    ${PDO_KCAL_LOCAL_SOURCES}
    ${HARDWARE_DRIVER_WINDOWS_SOURCES}
    )

SOURCE_GROUP("Source Files\\Common Source Files" FILES
    ${COMMON_SOURCES}
    ${COMMON_WINDOWS_SOURCES}
    ${TARGET_WINDOWS_SOURCES}
    ${CIRCBUF_WINDOWS_SOURCES}
    ${MEMMAP_NULL_SOURCES}
    )

SOURCE_GROUP("Source Files\\Architecture Source Files" FILES
    ${ARCH_X86_SOURCES}
    )

SOURCE_GROUP("Header Files\\External Header Files" FILES ${OPLK_HEADERS})
SOURCE_GROUP("Header Files\\Internal Header Files" FILES ${STACK_HEADERS})
SOURCE_GROUP("Header Files\\Kernel Header Files" FILES ${KERNEL_HEADERS})
SOURCE_GROUP("Header Files\\User Header Files" FILES ${USER_HEADERS})
SOURCE_GROUP("Object Dictionary" FILES
    ${OBJDICT_HEADERS}
    ${OBJDICT_DIR}/${OBJDICT}/objdict.h
    )

IF(CFG_STORE_RESTORE)
    ADD_DEFINITIONS(-DCONFIG_STORE_RESTORE)
ENDIF()

# Additional include directories
INCLUDE_DIRECTORIES(
    .
    ${OBJDICT_DIR}/${OBJDICT}
    ${CONTRIB_SOURCE_DIR}/pcap/windows/WpdPack/Include
    )

# Define library and installation rules
ADD_LIBRARY(${LIB_NAME} ${LIB_TYPE} ${LIB_SOURCES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${LINK_LIBRARIES})
SET_PROPERTY(TARGET ${LIB_NAME} PROPERTY COMPILE_DEFINITIONS_DEBUG DEBUG;DEF_DEBUG_LVL=${CFG_DEBUG_LVL})
SET_PROPERTY(TARGET ${LIB_NAME} PROPERTY DEBUG_POSTFIX "_d")
INSTALL(TARGETS ${LIB_NAME} RUNTIME DESTINATION . ARCHIVE DESTINATION .)
